Polished settings on Android, fixed English translations

--- a/godot/localization/mattemonster.csv
+++ b/godot/localization/mattemonster.csv
@@ -4,7 +4,7 @@ RESULT_2,Superbra!,Great!
 RESULT_3,Bra jobbat!,Good work!
 RESULT_4,Nästa gång kan du!,Practice more!
 RESULT_FROM,av,of
-RESULT_RIGHT,rätt,
+RESULT_RIGHT,rätt,right
 VIEW_NO_TIME,ingen tid,no time
 VIEW_BACK,Tillbaka,Back
 VIEW_PLAY,Spela,Play
